--- a/styles.css
+++ b/styles.css
@@ -331,7 +331,7 @@ form {
 }
 
 fieldset {
-    margin: 30px 0;
+    margin: 40px 0;
     padding: 2rem;
     border: 1px solid black;
     border-radius: 6px;
@@ -382,10 +382,15 @@ input[type=submit]:hover {
     background-color: #4a624a;
 }
 
-
-input[type="checkbox"] {
+.form-checkbox {
     float: left;
     margin-left: 0;
+}
+
+form {
+    width: 70%;
+    margin: 0 auto;
+    display: inline-block;
 }
 
 .header-section {
@@ -420,6 +425,7 @@ table {
     table-layout: fixed;
     text-align: center;
     line-height: 1.6;
+    font-size: .75rem;
 }
 
 th,
@@ -433,6 +439,7 @@ th {
     background-color: #5e785e;
     font-weight: bold;
     color: white;
+    font-size: 1rem;
 }
 
 td {
